[package]
name = "quinn-demo"
version = "0.1.0"
authors = ["Lionel Faber <lionel1704@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "~0.2.5", features = ["rt-core", "sync", "time", "io-driver", "macros"] }
rcgen = "~0.7.0"
rustls = { version = "~0.17.0", features = ["dangerous_configuration"] }
quinn = { version = "~0.6.1", features = ["tls-rustls"], default-features = false }
webpki = "~0.21.2"
futures = "~0.3.1"